# slack-socket-mode-client

./: .editorconfig  Cargo.toml  LICENSE
examples/: simple.rs
src/: lib.rs  protocol.rs
src/protocol/: events_api.rs
