[package]
name = "slack-socket-mode-client"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
runtime-async-std = ["async-std", "surf"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.12"
async-tungstenite = "0.12"
url = "2.2"
futures-util = "0.3"
log = "0.4"
async-tls = { version = "0.11", default-features = false, features = ["client"] }

async-std = { version = "1.9", optional = true }
surf = { version = "2.1", optional = true }

[dev-dependencies]
env_logger = "0.5"
async-std = { version = "1.9", features = ["attributes"] }
